influxDB/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/client-body-buffer-size: 20M
    nginx.ingress.kubernetes.io/proxy-body-size: 20M
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/enable-cors: "true"
#    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
#    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
#    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
#  tls:
#    - hosts:
#      - cs.dencomm.ai
#      secretName: dencomm
  rules:
  - host: influx.dencomm.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: influxdb
            port:
              number: 8086
